<resources>
    <string name="app_name">NaturalNet</string>

    <!-- Warning -->
    <string name="no_warnings">No Warnings Issued</string>
    <string name="warning_received">Warning Issued</string>
    <string name="warning_nearby">Warning Nearby</string>

    <string name="issued_by_label">Issued by:</string>
    <string name="issue_time_label">Issued at:</string>
    <string name="warning_magnitude_label">Magnitude:</string>
    <string name="warning_impact_time_label">Impact time:</string>

    <!-- Network -->
    <string name="network_status">Network Status</string>

    <string name="cellular_status_great">Great Cellular Signal</string>
    <string name="cellular_status_good">Good Cellular Signal</string>
    <string name="cellular_status_moderate">Moderate Cellular Signal</string>
    <string name="cellular_status_poor">Poor Cellular Signal</string>
    <string name="cellular_status_none">No Cellular Signal</string>

    <string name="gps_status_great">Great GPS Signal</string>
    <string name="gps_status_good">Good GPS Signal</string>
    <string name="gps_status_moderate">Moderate GPS Signal</string>
    <string name="gps_status_poor">Poor GPS Signal</string>
    <string name="gps_status_none">No GPS Signal</string>

    <string name="net_status_great">Great Peer Connectivity</string>
    <string name="net_status_good">Good Peer Connectivity</string>
    <string name="net_status_poor">Poor Peer Connectivity</string>
    <string name="net_status_none">No Peer Connectivity</string>

    <string name="bt_not_supported">Bluetooth Not Supported</string>

    <string name="net_connections_prefix">- </string>
    <string name="net_connections_default">0</string>
    <string name="net_connections_suffix">Nodes Connected</string>
</resources>
