<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/fragment_container"
              android:background="@drawable/green_rounded_fragment"
              android:clipToPadding="true"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Network Title -->
        <LinearLayout
                android:id="@+id/network_title_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp">

            <!-- Network Status Icon -->
            <ImageView
                    android:id="@+id/network_icon"
                    android:layout_width="10dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_network_check"
                    android:layout_weight="0.21"/>

            <!-- Network Status Text -->
            <TextView
                    android:id="@+id/network_title"
                    android:text="@string/network_status"
                    android:textColor="@android:color/white"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

            <!-- Chevron Down Icon -->
            <ImageView
                    android:id="@+id/chevron_down_icon"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:tint="@android:color/white"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_chevron_down"
                    android:layout_weight="0.18"/>

            <!-- Chevron Up Icon -->
            <!-- Default Visibility: Gone -->
            <ImageView
                    android:id="@+id/chevron_up_icon"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:tint="@android:color/white"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_chevron_up"
                    android:layout_weight="0.18"/>

        </LinearLayout>

        <!-- Network Content -->
        <!-- Default Visibility: Gone -->
        <LinearLayout
                android:id="@+id/network_content_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:visibility="gone">

            <!-- Cellular Signal -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                <!-- Good Signal Icon -->
                <ImageView
                        android:id="@+id/cellular_signal_icon"
                        android:tint="@android:color/white"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_network_cell_great"
                        android:layout_weight="1"/>

                <!-- Signal Status Text -->
                <TextView
                        android:id="@+id/cellular_signal_text"
                        android:text="@string/cellular_status_good"
                        style="@android:style/TextAppearance.Medium"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>

            </LinearLayout>

            <!-- GPS Signal -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                <!-- Good Signal Icon -->
                <ImageView
                        android:id="@+id/gps_signal_icon"
                        android:tint="@android:color/white"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_gps_fixed"
                        android:layout_weight="1"/>

                <!-- Signal Status Text -->
                <TextView
                        android:id="@+id/gps_signal_text"
                        android:text="@string/gps_status_good"
                        style="@android:style/TextAppearance.Medium"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>

            </LinearLayout>

            <!-- NaturalNet Signal -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <!-- Good Signal Icon -->
                    <ImageView
                            android:id="@+id/net_signal_icon"
                            android:tint="@android:color/white"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_net_signal_great"
                            android:layout_weight="1"/>

                    <!-- Signal Status Text -->
                    <TextView
                            android:id="@+id/net_signal_text"
                            android:text="@string/net_status_good"
                            style="@android:style/TextAppearance.Medium"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"/>

                </LinearLayout>

                <!-- Signal Status Text -->
                <LinearLayout
                        android:id="@+id/net_number_of_connections_wrapper"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/net_number_of_connections_prefix"
                            android:text="@string/net_connections_prefix"
                            style="@android:style/TextAppearance.Small"
                            android:textColor="@android:color/white"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"/>

                    <TextView
                            android:id="@+id/net_number_of_connections"
                            android:text="@string/net_connections_default"
                            style="@android:style/TextAppearance.Small"
                            android:textColor="@android:color/white"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"/>


                    <TextView
                            android:id="@+id/net_number_of_connections_suffix"
                            android:text="@string/net_connections_suffix"
                            style="@android:style/TextAppearance.Small"
                            android:textColor="@android:color/white"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
